# chat-app

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-be8eecc8379e801986c5cb58172188be81d0b04b115d64cacaf0375bb4cb13a6.json
src/: Session.vim  chat.db  client.rs  client_chat.rs  example_data.sql  model.rs  server.rs  server_db.rs  setupdb.sql
src/client/: client.rs
src/server/: chat.db  db.rs  model.rs  server.rs
