[package]
name = "chat-application"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rusqlite = "0.32.1"
serde = "1.0.214"
serde_json = "1.0.132"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
