[package]
name = "chat-application"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.8"
eframe = "0.29.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = "1.0.214"
serde_json = "1.0.132"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
